--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch index.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +20,17 @@
   },
   "homepage": "https://github.com/SebastienWeb/apiLePanda#readme",
   "devDependencies": {
+    "@prisma/client": "^4.5.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
+    "fastify": "^4.9.2",
+    "prettier": "2.7.1",
     "prisma": "^4.5.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.5.0"
+    "@fastify/compress": "^6.1.1",
+    "@fastify/cors": "^8.1.1",
+    "@fastify/helmet": "^10.0.2",
+    "dotenv": "^16.0.3"
   }
 }
